all except for G in

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -13,8 +13,9 @@
 	\input{output/abccare_programcomparison.tex}
 \begin{tablenotes}
 \small
-\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that ABC and CARE had the same feature. A blank space indicates that the indicated component was not part of the program.
-    $^*$ As documented in Appendix~\ref{app:eligibility-pop}, there were losses in the initial samples due to death, parental moving, and diagnoses of mental pathologies for the children.
+\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that ABC and CARE had the same feature. A blank space indicates that the indicated component was not part of the program.\\
+\item $\bm{^*}$As documented in Appendix~\ref{app:eligibility-pop}, there were losses in the initial samples due to death, parental moving, and diagnoses of mental pathologies for the children.\\
+\item $\bm{^{**}}$ We do not analyze this sample in this paper and mention it only for completeness.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
