--- a/Appendices/Controlsubs.tex
+++ b/Appendices/Controlsubs.tex
@@ -2,7 +2,7 @@
 
 \section{Accounting for Alternatives Chosen by the Control Group} \label{appendix:cbaresultscont}
 
-\noindent Our main analysis so far compares the treatment to the control group, irrespective of the choice of childcare chosen by the families of the control-group children. This exercise compares treatment to the ``next best'' alternative that the parents of the control-group children elected. As we document in Section~\ref{section:background} of the paper, almost 75\% of the control-group children were enrolled in an alternative.
+\noindent Our main analysis so far compares the treatment to the control group, irrespective of the choice of childcare chosen by the families of the control-group children. This exercise compares treatment to the ``next best'' alternative that the parents of the control-group children elected. As we document in Section~\ref{section:background} of this paper, almost 75\% of the control-group children were enrolled in an alternative.
 
 \noindent In this Appendix we disaggregate our estimates by computing social efficiency measures for ABC/CARE relative to (a) alternative (low-quality) formal childcare options and (b) staying at home. We refine our analysis to draw two further comparisons: (i) ABC/CARE compared to no treatment at all (so that the control child stayed at home); and (ii) ABC/CARE compared alternative preschool arrangements, which we describe in Section~\ref{section:background}.\footnote{\cite{Garcia_Heckman_Ziff_2018_EER} discuss this issue in depth.}
 
