--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -198,7 +198,7 @@ For individual $i$ in experimental sample ($k=e$), an individual $l(i)$ in the a
 
 \noindent We estimate dynamic relationships between outcomes and predictors in the auxiliary samples and use the estimated relationships to generate forecasts in the non-experimental samples. When producing these estimates, we use our synthetic cohort (i.e.,\ our weighted auxiliary samples).
 
-\noindent \textbf{Summary: Variables Used to Match to Construct Synthetic Cohorts}\\
+\noindent \textbf{Variables Used to Match to Construct Synthetic Cohorts}\\
 When constructing synthetic cohorts, we use each of the following variables, \textit{for all the outcomes}: year of birth, gender, number of siblings at baseline. The criterion for selecting these variables is availability across all auxiliary sources. We construct one synthetic cohort in each auxiliary sample.
 
 \subsubsection{Variables Used to Forecast Out-of-Sample Outcomes} \label{appendix:pred}
@@ -369,7 +369,7 @@ For notational brevity in the definitions that follow, consider the production f
 Y^d_{k,a} =\phi^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) \ + \ \varepsilon^d_{k,a},  \label{eq:outcomesin} \\
 \end{equation}
 
-\noindent where the variables are defined analogously to Equation~\eqref{eq:outcome2}. Note that the arguments of $\phi^d_{k,a}$ are still vectors in this case, and we abuse notation to make unbolded variables generic scalars. Define an associated measurement system for the error term $\varepsilon^d_{k,a}$:
+\noindent where the variables are defined analogously to Equation~\eqref{eq:outcome2}. Note that the arguments of $\phi^d_{k,a}$ are still vectors in this case. We abuse notation to make unbolded variables generic scalars. Define an associated measurement system for the error term $\varepsilon^d_{k,a}$:
 
 \begin{align}  \label{eq:sa-msystemmain}
 \varepsilon^d_{k,a} &=\bm{\beta}^d \bm{\theta}_{a}^d + \bm{\omega}_{a}^d  &(b) \nonumber \\
@@ -402,7 +402,7 @@ Note: Panel (a) displays a factor score estimated based on the measurement syste
 
 \noindent At age 30 and in the auxiliary sample, we can also estimate $\bm{\theta}_{a}^d$. For want of data to approximate $\bm{\theta}_{c}, \bm{\theta}_{nc}$ in PSID and NLSY79, we use the CNLSY in this appendix. Our measurement system for $\bm{\theta}_{c}$ consists of reading and comprehension PIAT scores as well as by the Peabody Picture Vocabulary Test (PPVT). Our measurement system for $\bm{\theta}_{nc}$ is based on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior).
 
-\noindent Once these estimates are available, we can test Assumption~\ref{ass:exog} in the experimental and non-experimental samples.  The test consists of the following. Let $\bm{\gamma}^E$ be the parameter associated to $\bm{X}^d_{k,a}$ in Equation~\eqref{eq:outcomesin} in a linear regression when not accounting for $\bm{\theta}_{a}^d$. Similarly, let $\bm{\gamma}^I$ be the parameter associated with $\bm{X}^d_{k,a}$ in Equation~\eqref{eq:outcomesin} when accounting for $\bm{\theta}_{a}^d$. Under the null hypothesis that Assumption~\ref{ass:exog} holds $\bm{\gamma}^E = \bm{\gamma}^I$ and $\bm{\theta}_{a}^d$ is an irrelevant predictor in Equation~\eqref{eq:outcomesin}. We test the null hypothesis by asking if the elements in $\bm{\theta}_{a}^d$ are relevant predictors of labor and transfer income. We perform these tests in the experimental sample pooling the treatment and control groups (i.e.,\ under the invariance assumption that we document in Section~\ref{section:cbamethodology}) and in the non-experimental sample using our synthetic cohort. We contrast specifications with and without including estimates of $\bm{\theta}_{a}^d$, and report the $F$-statistic corresponding to this comparison. This is a version of a Durbin-Wu-Hausman test \citep[see][]{Durbin_1954_RISI,Wu_1973_Econometrica,Hausman_1978_Econometrica}. Tables~\ref{table:endoginc} to \ref{table:trincome} present the results. In most cases, we are not able to reject the null hypothesis that Assumption~\ref{ass:exog} holds.
+\noindent Once these estimates are available, we can test Assumption~\ref{ass:exog} in the experimental and non-experimental samples.  The test consists of the following. Let $\bm{\gamma}^E$ be the parameter associated to $\bm{X}^d_{k,a}$ in Equation~\eqref{eq:outcomesin} in a linear regression when not accounting for $\bm{\theta}_{a}^d$. Similarly, let $\bm{\gamma}^I$ be the parameter associated with $\bm{X}^d_{k,a}$ in Equation~\eqref{eq:outcomesin} when accounting for $\bm{\theta}_{a}^d$. Under the null hypothesis that Assumption~\ref{ass:exog} holds $\bm{\gamma}^E = \bm{\gamma}^I$ and $\bm{\theta}_{a}^d$ is an irrelevant predictor in Equation~\eqref{eq:outcomesin}. We test the null hypothesis by asking if the elements in $\bm{\theta}_{a}^d$ are relevant predictors of labor and transfer income. We perform these tests in the experimental sample pooling the treatment and control groups (i.e.,\ under the invariance assumption that we document in Section~\ref{section:cbamethodology}) and in the non-experimental sample using our synthetic cohort. We contrast specifications with and without including estimates of $\bm{\theta}_{a}^d$, and report the $F$-statistic corresponding to this comparison. This is a version of a Durbin-Wu-Hausman test \citep[see][]{Durbin_1954_RISI,Wu_1973_Econometrica,Hausman_1978_Econometrica}. Tables~\ref{table:endoginc} to \ref{table:trincome} present the results from these tests. In most cases, we are not able to reject the null hypothesis that Assumption~\ref{ass:exog} holds.
 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
@@ -580,7 +580,7 @@ Note: Panel (a) displays the net-present value (treatment less control) of paren
 \begin{align}
 \sum_{a=0}^A \frac{ \mathbb{E} (B_a - C_a)}{(1+\rho)^a} = 0,
 \end{align}
-where we let $A = 79$. In this subsection we define $B_a$ and $C_a$ to be the (discounted) total benefits and costs of the program at age $a$, and define $\mathbb{E}(.)$ to be the sample mean.\footnote{Note that in this subsection $B$ is not the condition set for eligibility.} That is, we estimate the internal rate of return for the \textit{average subject} of ABC/CARE. \\
+where we let $A = 79$. In this subsection we define $B_a$ and $C_a$ to be the (discounted) total benefits and costs of the program at age $a$, and define $\mathbb{E}(.)$ to be the sample mean.\footnote{Note that in this subsection $B$ is not the conditioning set for eligibility.} That is, we estimate the internal rate of return for the \textit{average subject} of ABC/CARE. \\
 
 \noindent All outcomes of the parents and subjects affected by the program are treated as benefits. For this to make sense, we reverse the sign of the monetized effect of the program on specific outcomes. Costs of ABC/CARE consist only of the initial program costs from ages 0 to 5. Table \ref{table:bc_comp} provides a full list of the benefits and costs of ABC. \\
 
@@ -588,7 +588,7 @@ where we let $A = 79$. In this subsection we define $B_a$ and $C_a$ to be the (d
 
 \noindent The principle for multiplying the public costs is the following. We evaluate the social benefits of ABC/CARE and do not place a value on who receives the money. The only social cost from a direct transfer is the dead-weight loss that it generates: $50\%$ of its total value. We do not consider education and criminal costs to be a direct transfer. Thus, we multiply them by a factor of $1.5$: the value of their cost plus $50\%$ of the value of their cost (the dead-weight loss implied in raising the public revenue to fund them). Table \ref{table:bc_comp} lists the factor we use to multiply each cost to account for its implied dead-weight loss.
 
-\noindent After constructing our cash flow, $\mathbb{E} (B_a - C_a)$, solving for $\rho$ reduces to an algebraic exercise. The expected life-cycle profile of net benefits need to satisfy a ``single crossing property'' in order to obtain a unique solution for the internal rate of return.\footnote{See \citet{Arrow-Levhari_1969_EJ} for a formal discussion, although the discussion on multiplicity, sign, and real or complex nature of the roots of a polynomial traces back to Descartes' Rule of signs.} The single crossing property holds when the benefits do not go from positive to negative across the life cycle. When the single crossing property is not satisfied, the internal rate of return is not a valid summary for the efficiency of an investment. To calculate the internal rate of return, we estimate the treatment effect on each component of the benefits and costs at age $a$ for the pooled, male, and female samples. We do this for 100 bootstrap resamples of the original ABC/CARE data. In the case of health costs and subject income, for which we employ auxiliary datasets to estimate the treatment effects, we also obtain 100 bootstrap estimates from the auxiliary data for every ABC/CARE bootstrap resample, resulting in a total of 100,000 estimates. By reusing each bootstrap estimate of the treatment effect on outcomes that do not require any auxiliary data set 100 times, we obtain a total of 100,000 estimates of the cash flow. We estimate the internal rate of return on each of those cash flows, and discard those for which we find a negative internal rate of return. \textbf{[JJH: What percentage of sample?] [JLG: See Figure C.5, where we display the distribution, and the point estimate with standard error in parenthesis and p-value in brackets for pooled, males, and females. We also show the \% that we drop out. We were showing parameter for all counterfactuals and I kept only control vs. next best.] [JJH: The distribution is truncated at zero. What $\%, < 0$?] [JLG: Yes. The figure in the next page displays this fraction for pooled, males and females.]} The remaining estimates form our empirical bootstrap distribution of the internal rate of return for the pooled, male, and female samples. We take the mean of the distributions to be the point estimates, and we take the sample standard deviations to be the standard errors. To construct the 80\% confidence intervals, we take the 10\textsuperscript{th} and 90\textsuperscript{th} percentiles of each bootstrap distribution.
+\noindent After constructing our cash flow, $\mathbb{E} (B_a - C_a)$, solving for $\rho$ reduces to an algebraic exercise. The expected life-cycle profile of net benefits need to satisfy a ``single crossing property'' in order to obtain a unique solution for the internal rate of return.\footnote{See \citet{Arrow-Levhari_1969_EJ} for a formal discussion, although the discussion on multiplicity, sign, and real or complex nature of the roots of a polynomial traces back to Descartes' Rule of signs.} The single crossing property holds when the benefits do not go from positive to negative across the life cycle. When the single crossing property is not satisfied, the internal rate of return is not a valid summary for the efficiency of an investment. To calculate the internal rate of return, we estimate the treatment effect on each component of the benefits and costs at age $a$ for the pooled, male, and female samples. We do this for 100 bootstrap resamples of the original ABC/CARE data. In the case of health costs and subject income, for which we employ auxiliary datasets to estimate the treatment effects, we also obtain 100 bootstrap estimates from the auxiliary data for every ABC/CARE bootstrap resample, resulting in a total of 100,000 estimates. By reusing each bootstrap estimate of the treatment effect on outcomes that do not require any auxiliary data set 100 times, we obtain a total of 100,000 estimates of the cash flow. We estimate the internal rate of return on each of those cash flows, and discard those for which we find a negative internal rate of return. The remaining estimates form our empirical bootstrap distribution of the internal rate of return for the pooled, male, and female samples. We take the mean of the distributions to be the point estimates, and we take the sample standard deviations to be the standard errors. To construct the 80\% confidence intervals, we take the 10\textsuperscript{th} and 90\textsuperscript{th} percentiles of each bootstrap distribution.
 
 \noindent Figure~\ref{figure:irrdist} reports the distributions of the internal rates of return, by gender and for each of the three parameters that we consider (treatment vs. next best, treatment staying at home, treatment vs. alternative preschool). For some parameters and genders, we discard a high percentage of the internal rate of return of the outcomes. We next discuss how we calculate the benefit/cost ratios, noting that this statistic is not subject the same caveat as the internal rate of return: we can summarize the efficiency of the investment even in the absence of the single-crossing property.
 
@@ -729,7 +729,6 @@ In the auxiliary samples, we observe outcomes $Y_{n,a}$ for $a \in [a^*, \ldots,
 \begin{tablenotes}
 \footnotesize
 \item Note: This table displays the net present value of labor income in 2014 USD (treatment - control) using the five different specifications for forecasting that are explained below. Specification 1 is our baseline estimate. It also presents the calculation of the internal rate of return and the benefit/cost ratio of the program using these different net present values. Specification 1: forecast based on lagged outcome; no serial autocorrelation; and no fixed effect. Specification 2: forecast based on lagged outcome; arbitrary serial autocorrelation; and no fixed effect. Specification 3: forecast based on lagged outcome; first-order serial autocorrelation; and no fixed effects. Specification 4: forecast based on lagged outcome; no serial autocorrelation; and fixed effect.
-\item \textbf{[JJH: We say estimates are ``close'' - but NPV estimates are wildly diferent - how to explain this? Close in what metric?] [JLG: The metric is that, in any of these specifications, the program is still socially efficient. The NPVs are different because these are very much different processes with large standard errors in our samples. It's unrealistic to expect perfect alignment. If you look at the IRRs and BC ratios, we would hardly ever reject equality. Look at the standard errors.]}
 \end{tablenotes}
 \end{threeparttable}
 }
@@ -767,10 +766,6 @@ An alternative to any of these scenarios is to make forecasts using a non-parame
 
 A sufficient condition for the validity of this procedure is Assumption~\ref{ass:exog} (Exogeneity). Without exogeneity, the joint distributions of $\bm{X}_{k,a*}, \varepsilon_{k,a^*}$ do not necessarily coincide across the experimental and the auxiliary samples. For example, in the experimental sample, individuals in the treatment group have relatively high levels of education due in part to the exogenous boost generated by randomization into treatment. In the auxiliary sample, the usual form of ability bias may be at work: individuals with relatively high levels of education might have better motivation, better parents, etc. Thus, the empirical relationships between education and labor income may differ across experimental and auxiliary samples. Exogeneity avoids this problem, but clearly only a weaker assumption is required.
 
-\noindent \textbf{[JJH: Jorge - which steps - if any - are actually done. How much we drop?]}\\
-
-\noindent \textbf{[JLG: The GMM section was dropped. It served its purpose in case a question were to come out in a seminar but it didn't and it certainly makes it look like we are doing what we do not do.]}\\
-
 \subsection{Inference} \label{appendix:bootstrap}
 
 \noindent This section provides the precise steps for constructing the bootstrap distribution and for computing the standard errors for the main estimates in our paper.
@@ -784,24 +779,24 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 
 \item Impose the initial conditions on the auxiliary sample as described in Appendix~\ref{app:datasets}.
 
-\item Resample the non-experimental sample with replacement at the individual level. When an individual is resampled, his/her whole life-cycle history is considered. Denote this sample by $(n,s')$. \textbf{[JLG: You were right that steps 2 and 3 were flipped]}
+\item Resample the non-experimental sample with replacement at the individual level. When an individual is resampled, his/her whole life-cycle history is considered. Denote this sample by $(n,s')$.
 
 \item Construct the synthetic cohorts by matching the samples $(e,s)$ and $(n,s')$ using Mahalanobis Matching. Note that this matching procedure is based solely on baseline variables not affected by treatment.
 
 \item Fit the dynamic relationships in Equation~\eqref{eq:outcome}, using predictors as discussed in Appendix~\ref{appendix:pred}. For estimates by gender, make different predictions by gender.
 
-\item Use the fitted dynamic relationship to fit out of sample in $(e,s)$. This gives us an age-by-age forecast \textit{without forecasting error} for each individual in the experimental sample. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{Y}_{i,e,s}$, where $\mathcal{Y}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$. \textbf{[JJH: Each draw is a life cycle path?] [JLG: Correct. I have clarified this in items 1 and 3 of this list.]}
+\item Use the fitted dynamic relationship to fit out of sample in $(e,s)$. This gives us an age-by-age forecast \textit{without forecasting error} for each individual in the experimental sample. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{Y}_{i,e,s}$, where $\mathcal{Y}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$.
 
 \item When fitting the dynamic relationship in sample $(n,s')$, individual $j$ in the non-experimental sample has a vector containing the residuals of each of her predicted variables (for example, labor income). Call this vector of residuals $\bm{\mathcal{E}}_{j,n,s'}^d$: the vector of residuals for individual $j$ in the auxiliary bootstrap sample $s'$.
 
-\item Randomly pair individual $i$ in sample $(e,s)$ with individual $j$ in sample $(n,s')$. This random pairing is stratified by the variables $\bm{B}_k$ and $\bm{X}_{k,a}^d$ defined in the paper. The forecast accounting for forecasting error is $\mathcal{Y}_{i,e,s}+ \bm{\mathcal{E}}_{j,e,s'}$. \textbf{[JJH: Shouldn't this be done conditional on regressors? We are certainly conditioning on X or do we invoke independence of errors here?] [JLG: Yes. I am sorry this wasn't here. It's a stratified pairing and our support conditions allow us to do this without empty cells issues.]}
+\item Randomly pair individual $i$ in sample $(e,s)$ with individual $j$ in sample $(n,s')$. This random pairing is stratified by the variables $\bm{B}_k$ and $\bm{X}_{k,a}^d$ defined in the paper. The forecast accounting for forecasting error is $\mathcal{Y}_{i,e,s}+ \bm{\mathcal{E}}_{j,e,s'}$.
 
 \item Repeat this for all pairs of samples $(n,s'), (e,s)$. Resample the experimental sample and auxiliary sample 100 times each. This gives us the empirical bootstrap distribution, with 100*100 points.
 
 \item Compute the standard error as the sample standard deviation of the 100*100 re-samples. Compute the $p$-value's as the proportion of times that we reject the null hypothesis, after centering the empirical bootstrap distribution according to the null hypothesis.
 \end{enumerate}
 
-\noindent \textbf{[JJH: What about standard for the second -nonparametric- matching procedure?] [JLG: It comes next. We add back the the parametric residuals. I think that we could do better; but also believe that this is valid. We are estimating the conditional mean function with non-parametrically and the residual parametrically. This makes the computation really simple.]}
+\noindent \textbf{[JJH: What about standard errors for the second -nonparametric- matching procedure?] [JLG: It comes next. We add back the the parametric residuals. I think that we could do better; but also believe that this is valid. We are estimating the conditional mean function with non-parametrically and the residual parametrically. This makes the computation really simple.] [JJH: But can we check the other way? How much difference does it make?] [JLG: Yes. Let us clear G and this won't take more than a morning.]}
 
 \subsubsection{Inference for Non-Parametric Forecasts}
 
@@ -813,7 +808,7 @@ A sufficient condition for the validity of this procedure is Assumption~\ref{ass
 
 \item Resample the non-experimental sample with replacement at the individual level. When an individual is resampled, his/her whole life-cycle history is considered. Denote this sample by $(n,s')$.
 
-\item Perform the procedure to construct the synthetic cohort, estimate the dynamic relationship and impute the profiles by matching on baseline variables and on variables affected by treatment as explained in Appendix~\ref{appendix:nonpar}. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{\tilde{Y}}_{i,e,s}$, where $\mathcal{\tilde{Y}}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$.
+\item Perform the matching procedure to construct the synthetic cohort, estimate the dynamic relationship and impute the profiles by matching on baseline variables and on variables affected by treatment as explained in Appendix~\ref{appendix:nonpar}. Store the predictions at all ages for individual $i$ in this sample in a vector $\mathcal{\tilde{Y}}_{i,e,s}$, where $\mathcal{\tilde{Y}}_{i,e,s}$ is the vector of forecasts for individual $i$ in the experimental bootstrap sample $s$.
 
 \item Compute the residuals in in step 7 of Appendix~\ref{appendix:bootstrapspreds}.
 
