--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -6,7 +6,7 @@
 \hspace{.6cm} Treatment & & & \\
 \hspace{.5cm} Second-phase & 5 to 8 years old & 5 to 8 years old &\checkmark \\
 \hspace{.6cm} Treatment & & & \\
-\hspace{.5cm} Initially Recruited & 121$^*$ & 67\\
+\hspace{.5cm} Initially Recruited & 121$\bm{^*}$ & 67\\
 \hspace{.6cm} Sample & & &\\
 \hspace{.5cm} \# of Cohorts &4&2\\
 \midrule
@@ -35,7 +35,7 @@
 \hspace{.5cm} Staff-to-child Ratio &&1:1\\
 \hspace{.5cm} Staff Qualifications &&Home visitor training\\
 \midrule
- \textbf{School-age Treatment} \\
+ \textbf{School-age Treatment$\bm{^{**}}$} \\
  \hspace{.5cm} Treatment N& 49 &39\\
   \hspace{.5cm} Control N& 47 &22\\
 \hspace{.5cm} Intensity & Every other week& Every other week & \checkmark\\
