first stab at G

--- a/Appendices/Health.tex
+++ b/Appendices/Health.tex
@@ -1,8 +1,12 @@
 \section{Health Outcomes in the Future Adult Model (FAM)} \label{appendix:health}
 
+\noindent \textbf{[JJH: The last battle zone!]}\\
+
 This appendix explains our methodology for measuring the projected differences in health outcomes and medical expenditure over the adult life for the treated and control groups in ABC/CARE.
 Health outcomes and behaviors of ABC/CARE subjects are measured at the age-30 interview and in a health follow-up conducted when the subjects were in their mid-30s.
-To project the life-cycle path of health outcomes and medical expenditures, we use a dynamic microsimulation model (the Future Adult Model - FAM)to track the treatment and control cohorts from age 30 until death.
+To project the life-cycle path of health outcomes and medical expenditures, we use a dynamic microsimulation model (the Future Adult Model - FAM) to track the treatment and control cohorts from age 30 until death.
+
+\noindent \textbf{[JJH: Can we create an schematic? We need to show exactly how these parts fit together and what we add] [JLG: I created some schematics hoping to clarify. We can work on clarifying them. I also provided a list of questions/answers. I hope that this helps.]}
 
 \input{Appendices/Health/bgdesc.tex}
 \input{Appendices/Health/data.tex}
