--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -1,4 +1,4 @@
-\subsection{Background and Description of FAM\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.}}
+\subsection{Overview of the FAM\footnote{This microsimulation model is an extension of the model used by \citet{Prados_etal_2015_How-Much-Can-Education}; the technical details are described in \citet{Goldman_etal_2015_Future-Adult-Model}. Both models are related to the Future Elderly Model (FEM), which is a microsimulation tool originally developed to examine the health and health care costs among the elderly Medicare population \citep{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}. It has been used extensively to assess health and disease prevention scenarios: FEM has been used to assess the future costs of disease, the benefits of preventing disease among older population, the consequences of new medical technologies, trends in disability, and the fiscal consequences of worsening population health (see \citet{Goldman_etal_2004_RAND-Report_Health-Status-Elderly}, \citet{Lakdawalla_etal_2004_Health-and-Cost}, \citet{Goldman_etal_2005_HA}, and \citet{Zissimopoulos_etal_2014_Delaying-Alzheimers}). The main differences with FEM are that the model we use starts with cohorts of individuals at age 30 instead of 50, and that it simulates more outcomes than FEM, because they are important to explain health outcomes and medical expenditure at younger ages, like evolution of partnership and marital status, work status, and family size.}}
 
 \noindent The core of the model can be described as follows: first, the cohort starter module contains the health outcomes of the ABC/CARE subjects at age 30 and other variables that are used as input for the simulation of individual trajectories. This module uses ABC/CARE data. Missing variables in the ABC/CARE data are imputed probabilistically from models estimated using PSID data. Next, the transition module calculates the individual probabilities of transiting across various health states and other outcomes relevant to health. The transition probabilities are estimated from the longitudinal data in the PSID, taking as inputs risk factors such as smoking, weight, alcohol consumption, gender, race and ethnicity, age and education, along with lagged health, personal, and economic states.\footnote{Section \ref{section:data} provides details about the data sources used in the estimation.} This scheme allows for a great deal of heterogeneity in the population and fairly general feedback effects. The outcomes module aggregates projections of individual-level outcomes into outcomes such as
 QALY and medical expenditures.
