--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -1,4 +1,4 @@
-\subsection{Validation}
+\subsection{Model Validation}
 \label{appendix:health-validation}
 \noindent To evaluate the performance of the full version of the FAM model, we validate it using various techniques.
 %including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.}
@@ -28,7 +28,7 @@ Risk factors are presented in Table~\ref{table:crossval_risk}. BMI is not statis
 \input{AppOutput/Health/crossval_unweighted.tex}
 \begin{tablenotes}
 \footnotesize
-\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares mean outcomes between the simulated (FAM) and actual (PSID) populations. The $p$-value reports a bootstrap test of equality of the actual means and the forecast means. \textbf{[JJH: How well do we match distributions? Fitting in means is easy.] [JLG: Our matching of higher moments is not that good. I think we were fine with it because for all practical matters we are working with means but it is a concern.}
+\item Note: This cross-validation exercise randomly samples half of the PSID respondent IDs for use in estimating the transition models. The respondents not used for estimation, but who were present in the PSID sample in 1999, are then simulated from 1999 through 2013. This table compares mean outcomes between the simulated (FAM) and actual (PSID) populations. The $p$-value reports a bootstrap test of equality of the actual means and the forecast means. We focus on the fit of means because all of our forecasts are in terms of means.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
